--- a/exercises/sheet09/sheet09.tex
+++ b/exercises/sheet09/sheet09.tex
@@ -47,6 +47,12 @@
 
 
 \section*{Exercise \homeworkNumber.3}
+\begin{enumerate}
+	\item The graph \( G \) has 2 cycles \( \left\{ \left\{ J , N, L \right\}, \left\{ L, I, K \right\} \right\} \) of length 3. The given graph has three cycles \( \left\{ 1,2,4 \right\}, \left\{ 4,7,6 \right\}, \left\{ 6,7,8 \right\}  \) of length 3. The graphs don't have the same properties and are therefore not isomorphic.
+
+	\item \( \sigma = \left\{ H \to 2, J \to 5, N \to 8, L \to 4, O \to 7, K \to 3, I \to 6, M \to 1 \right\}  \)
+
+\end{enumerate}
 
 
 \section*{Exercise \homeworkNumber.4}
