--- a/exercises/sheet09/sheet09.tex
+++ b/exercises/sheet09/sheet09.tex
@@ -45,6 +45,11 @@
 
 \section*{Exercise \homeworkNumber.2}
 
+Based on the examples given on the slides for identifying graph invariants to disproof isomorphism, we can propose two more:
+\begin{itemize}
+    \item Acyclicity
+    \item Planarity
+\end{itemize}
 
 \section*{Exercise \homeworkNumber.3}
 \begin{enumerate}
@@ -56,7 +61,17 @@
 
 
 \section*{Exercise \homeworkNumber.4}
-
+\begin{enumerate}[(a)]
+    \item
+    We specify $V1 = \{1,2,4,5\}$ and $V2 = \{3,4,5,6\}$. \\
+    $\sigma_{v1 \to v2} = \{ 1 \to 4, 2 \to 5, 4 \to 6, 5 \to 3 \}$
+    \item 
+    $\sigma' = \{ 4 \to 6, 2 \to 5\}$
+\end{enumerate}
 \section*{Exercise \homeworkNumber.5}
-
+\begin{enumerate}[(a)]
+    \item We multiply the possible compbinations of symetries in every connected component to get the total combinations in the whole graph. This is how to calculate permutations. 
+    We can assume the graph has at least the amount of symetries that occur by counting the amount of symetries in the connected components.
+    \item As it is possible to have symetries that range across connected components and don't occur within the connected components themselves, this is not a tight lower bound.
+\end{enumerate}
 \end{document}
