--- a/exercises/sheet11/sheet11.tex
+++ b/exercises/sheet11/sheet11.tex
@@ -51,6 +51,7 @@
 
 
 \section*{Exercise \homeworkNumber.2}
+I will disprove the statement: Every single Literal is a clause and a monomial, because the terms clause and monomial are also used for the corner case with only one literal. Every literal is also a formula. Therefore there exists a formula which is both a monomial and a clause.
 
 
 
